# Heex_SDK

./: README.md
Heex_SDK_2_37_1/: CHANGELOG.md  LICENSE.md  bootstrap.sh  runHeexKernel-limitedConnectivity.sh
Heex_SDK_2_37_1/agents/builtin/: heexPeriodicMonitor
Heex_SDK_2_37_1/get-started/cpp/: GetStartedMonitor  GetStartedRecorder  getStartedMonitor.cpp  getStartedRecorder.cpp  getStartedRecorder.h
Heex_SDK_2_37_1/hre/: HRE_LICENSE.md  HRE_setup.sh
Heex_SDK_2_37_1/kernel/: Core.conf  DataSender.conf  HeexJobs.db  HeexJobs.db-shm  HeexJobs.db-wal  heexCore
Heex_SDK_2_37_1/kernel/systemConfs/: systemConf.json
Heex_SDK_2_37_1/libraries/: README.md
Heex_SDK_2_37_1/libraries/HeexCom/: CMakeLists.txt  TcpClient.cpp  TcpHandler.cpp  TcpHandler.h  TcpServer.cpp  TcpSession.cpp  TcpSession.h
Heex_SDK_2_37_1/libraries/HeexCom/cmake/: FindHeexComDeps.cmake.in
Heex_SDK_2_37_1/libraries/HeexConfig/: CMakeLists.txt  HeexConfig.h
Heex_SDK_2_37_1/libraries/HeexConfig/cmake/: FindHeexConfigDeps.cmake.in
Heex_SDK_2_37_1/libraries/HeexMessages/: CMakeLists.txt  README.md
Heex_SDK_2_37_1/libraries/HeexMessages/RecorderMessages/: RecorderTools.cpp
Heex_SDK_2_37_1/libraries/HeexMessages/include/: DetectionArgs.h  Incident.h
Heex_SDK_2_37_1/libraries/HeexUtils/: CMakeLists.txt  HeexUtils.cpp  HeexUtils.h  HeexUtilsExeRunner.cpp  HeexUtilsFileLock.h  HeexUtilsFileOperations.cpp  HeexUtilsFileOperations.h  HeexUtilsGnss.h  HeexUtilsLog.cpp  HeexUtilsLog.h  HeexUtilsVersion.h  README.md
Heex_SDK_2_37_1/libraries/HeexUtils/cmake/: HeexUtilsConfig.cmake.in
Heex_SDK_2_37_1/samples/ApexAI/apex_ai_heex_demo_pkg/: CMakeLists.txt  package.xml
Heex_SDK_2_37_1/samples/ApexAI/apex_ai_heex_demo_pkg/include/apex_ai_heex_demo_pkg/: monitor_node.hpp
Heex_SDK_2_37_1/samples/ApexAI/apex_ai_heex_demo_pkg/src/: recorder_node.cpp
Heex_SDK_2_37_1/samples/ROS1/ros-datalake/: CMakeLists.txt  README.md  main.cpp
Heex_SDK_2_37_1/samples/ROS1/ros-datalake/MonitorADTransitionDisengagement/: CMakeLists.txt
Heex_SDK_2_37_1/samples/ROS1/ros-datalake/RecorderRosbagDataLakeExtractor/: CMakeLists.txt  RecorderRosbagDataLakeExtractor.cpp
Heex_SDK_2_37_1/samples/ROS2/ros2-edge/src/ros2_edge_in_memory_buffer_pkg/: README.md  package.xml
Heex_SDK_2_37_1/samples/ROS2/ros2-edge/src/ros2_edge_in_memory_buffer_pkg/include/ros2_edge_in_memory_buffer_pkg/: Ros2MonitorADTransitionDisengagement.h  Rosbag2RecorderSnapshotter.h  Snapshotter.hpp  ros2SampleUtils.h
Heex_SDK_2_37_1/samples/ROS2/ros2-edge/src/ros2_edge_in_memory_buffer_pkg/src/: Ros2EdgeInMemoryBuffer.cpp
Heex_SDK_2_37_1/samples/ROS2/ros2-edge/src/ros2_edge_in_memory_buffer_pkg/src/Ros2MonitorADTransitionDisengagement/: CMakeLists.txt  Ros2MonitorADTransitionDisengagement.cpp
Heex_SDK_2_37_1/samples/ROS2/ros2-edge/src/ros2_edge_in_memory_buffer_pkg/src/Rosbag2RecorderSnapshotter/: CMakeLists.txt  Rosbag2RecorderSnapshotter.cpp  Snapshotter.cpp
Heex_SDK_2_37_1/samples/cpp/: CMakeLists.txt  basicSampleMonitor_Boolean  basicSampleMonitor_Boolean.cpp  basicSampleMonitor_Interval  basicSampleMonitor_Interval.cpp  basicSampleMonitor_String  basicSampleMonitor_String.cpp  basicSampleMonitor_Threshold  basicSampleMonitor_Threshold.cpp  basicSampleMonitor_Zone  basicSampleMonitor_Zone.cpp  basicSampleRecorder  basicSampleRecorder.cpp  featureSampleMonitor_ConfChangedCallback  featureSampleMonitor_ConfChangedCallback.h  featureSampleRecorder_ConfChangedCallback  featureSampleRecorder_ConfChangedCallback.cpp  featureSampleRecorder_ConfChangedCallback.h
Heex_SDK_2_37_1/samples/python/: basicSampleMonitor_Boolean.py  basicSampleMonitor_Threshold.py  basicSampleMonitor_Zone.py
Heex_SDK_2_37_1/sdk/: CMakeLists.txt  CustomerSide.conf
Heex_SDK_2_37_1/sdk/CustomerSide/: Agent.cpp  Agent.h  BaseMonitor.cpp  BaseMonitor.h  BooleanDetector.h  BooleanMonitor.cpp  BooleanMonitor.h  Detector.h  GenericMonitor.cpp  HoldSignalOnDetector.h  HoldSignalOnMonitor.cpp  HoldSignalOnMonitor.h  InstantMonitor.cpp  IntervalDetector.h  IntervalMonitor.cpp  IntervalMonitor.h  Monitor.cpp  MonitorV2Interface.h  Recorder.cpp  RecorderInThePast.cpp  RecorderInThePast.h  SmartDataKitValues.h  StringDetector.h  StringMonitor.cpp  ValueConfiguration.cpp  ValueConfiguration.h  ZoneMonitor.cpp  ZoneMonitor.h
Heex_SDK_2_37_1/sdk/CustomerSidePython/: MonitorWrapper.h  PyHeexCustomerSide.cpp  RecorderWrap.cpp  RecorderWrap.h  with_gil.h
Heex_SDK_2_37_1/sdk/cmake/: HeexCustomerSideConfig.cmake.in
heex_ros/: .aderc  .bash_history
heex_ros/.config/: QtProject.conf
heex_ros/.config/Code/: Network Persistent State  TransportSecurity  machineid
heex_ros/.config/ros.org/: rqt_gui.ini
heex_ros/.heex/: runHeexKernel.pids
heex_ros/.pki/nssdb/: key4.db  pkcs11.txt
heex_ros/.ros/: rospack_cache_09589109660611689817  rospack_cache_18019822870472497271
heex_ros/Heex_SDK_2_39_1/: CHANGELOG.md  runHeexDataUpload.sh  runHeexKernel-noConnectivity.sh  runHeexKernel.sh
heex_ros/Heex_SDK_2_39_1/get-started/cpp/: CMakeLists.txt  GetStartedMonitor  GetStartedRecorder  getStartedMonitor.cpp  getStartedMonitor.h  getStartedRecorder.cpp
heex_ros/Heex_SDK_2_39_1/samples/ROS2/ros2-edge/src/ros2_edge_in_memory_buffer_v2_pkg/: CMakeLists.txt  README.md  package.xml
heex_ros/Heex_SDK_2_39_1/samples/ROS2/ros2-edge/src/ros2_edge_in_memory_buffer_v2_pkg/include/ros2_edge_in_memory_buffer_v2_pkg/: BagRecorder.h  SampleRos2BagRecorder.h  SampleRos2BooleanMonitor.h  ros2SampleUtils.hpp
heex_ros/Heex_SDK_2_39_1/samples/ROS2/ros2-edge/src/ros2_edge_in_memory_buffer_v2_pkg/src/: Ros2EdgeInMemoryBufferV2.cpp
heex_ros/Heex_SDK_2_39_1/samples/ROS2/ros2-edge/src/ros2_edge_in_memory_buffer_v2_pkg/src/SampleRos2BagRecorder/: BagRecorder.cpp  CMakeLists.txt  SampleRos2BagRecorder.cpp
heex_ros/Heex_SDK_2_39_1/samples/ROS2/ros2-edge/src/ros2_edge_in_memory_buffer_v2_pkg/src/SampleRos2BooleanMonitor/: CMakeLists.txt  SampleRos2BooleanMonitor.cpp
heex_ros/Heex_SDK_2_39_1/sdk/CustomerSidePython/: CMakeLists.txt  MonitorWrapper.h  PyHeexCustomerSide.cpp  RecorderWrap.cpp  WithGil.h
(+465 files in other folders)
